2006-03-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/admin.py:
	  Make "Refresh" on lost connection work

2006-03-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/test/test_dag.py:
	  add another test to ensure we get a unique offspring list
	* flumotion/common/bundle.py:
	  Use a DAG to get dependencies of a bundle.  Has the added bonus
	  of returning a shorter list of dependencies than before, since
	  now each item appears only once, yet still in a correct order.
	* flumotion/common/registry.py:
	  add a docstring

2006-03-10  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/soundcard/checks.py:
	* flumotion/component/producers/soundcard/soundcard.py:
	* flumotion/component/producers/soundcard/soundcard.xml:
	  Add warnings if people use versions of PyGTK, gst-python that exist.

2006-03-10  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/consumers/httpstreamer/admin_gtk.py:
	* flumotion/component/consumers/httpstreamer/http.glade:
	  Make stream URL clickable and use default app for mime type with
	  URL.  Fixes #319 Fixes #267

2006-03-09  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/consumers/httpstreamer/http.glade:
	  Gtk-2.4ify glade file that was committed to add stream URL
	  to http admin gtk

2006-03-09  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/consumers/httpstreamer/admin_gtk.py:
	* flumotion/component/consumers/httpstreamer/http.glade:
	* flumotion/component/consumers/httpstreamer/http.py:
	* flumotion/component/consumers/httpstreamer/http.xml:
	  Display Stream URL in http admin gtk UI

2006-03-09  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/producers/firewire/firewire.py:
	  Report message to admin when firewire bus resets, fixes #325

2006-03-09  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/admin/gtk/client.py: