@@ -1,6 +1,6 @@
 include $(top_srcdir)/common/python.mk
 
-component_PYTHON = __init__.py soundcard.py admin_gtk.py checks.py
+component_PYTHON = __init__.py soundcard.py admin_gtk.py
 componentdir = $(libdir)/flumotion/python/flumotion/component/producers/soundcard
 component_DATA = soundcard.xml
 
